# app

./: .gitignore  Makefile  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: release_android.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  service_locator.dart
lib/configs/: base.dart
lib/data/: video.dart  videos_repository.dart
lib/screens/: constants.dart  feed_screen.dart  feed_viewmodel.dart  messages_screen.dart  profile_screen.dart  search_screen.dart
lib/screens/components/: share_bottom_sheet.dart
lib/screens/feed_loader/: feed_loader.dart
lib/src/rust/: frb_generated.dart  (+3 more)
lib/utils/: tik_tok_icons_icons.dart
lib/widgets/: actions_toolbar.dart  bottom_bar.dart  circle_image_animation.dart  video_description.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/video/: video.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_tokstr.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_tokstr.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build_ffmpeg_on_linux_for_android.sh  build_ffmpeg_on_mac_for_android.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
(+12 files in other folders)
