[package]
name = "rust_lib_ghostr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
ghostr-rs = { git = "https://github.com/ghostr-social/ghostr-rs", branch = "main" }
once_cell = "1.20.2"
tracing = "0.1.41"
tracing-subscriber = { version="0.3.19", features=["env-filter"] }
log = "0.4.25"

[package.metadata.flutter_rust_bridge]
enable_lifetime = true


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

